--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Messenger</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="css/chat.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="https://crisco849.github.io/Crisco/css/chat.css" />
 </head>
 <body>
     <div id="chat-container">
@@ -17,7 +17,7 @@
     <br />
     <iframe id="iframe"></iframe>
     -->
-    <script src="/socket.io/socket.io.js"></script>
+    <!--<script src="/socket.io/socket.io.js"></script>-->
     
     <script>
         /*
